force-app/main/default/objects/Sync_History__c/Sync_History__c.object-meta.xml
<CustomObject>
    <label>inwise Sync History</label>
    <nameField>
        <displayFormat>SHN-{0000}</displayFormat>
        <label>Sync History No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>inwise Sync History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>