force-app/main/default/objects/Sync_History__c/fields/JobName__c.field-meta.xml
<CustomField>
    <fullName>JobName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JobName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>