force-app/main/default/objects/Sync_History__c/fields/Sync__c.field-meta.xml
<CustomField>
    <fullName>Sync__c</fullName>
    <label>inwise Sync</label>
    <referenceTo>Sync__c</referenceTo>
    <relationshipName>Sync_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>